--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "system-design-services",
   "version": "0.1.0",
+  "homepage": "https://fabio-matiusso.github.io/system-design-service",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "gh-pages": "^6.2.0",
     "nuka-carousel": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
